--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,98 @@
-# SiK Python Game - Dependencias
-# =============================
+# =============================================================================
+# SiK Python Game - Requirements
+# =============================================================================
+# Dependencias del proyecto SiK Python Game
+# Para instalar: pip install -r requirements.txt
+# Recomendado: usar Poetry en su lugar: poetry install
 
-# Motor del juego
-pygame-ce>=2.4.0
+# -----------------------------------------------------------------------------
+# Motor de Juego y Gráficos
+# -----------------------------------------------------------------------------
+pygame-ce>=2.4.0          # Motor de juego moderno (fork comunitario de pygame)
 
-# Interfaz de usuario
-pygame-menu>=4.4.0
-pygame-gui>=0.6.9
+# -----------------------------------------------------------------------------
+# Interfaz de Usuario (Opcional - no usado actualmente)
+# -----------------------------------------------------------------------------
+# pygame-menu>=4.4.0      # Menús estilizados (no usado - implementamos propios)
+# pygame-gui>=0.6.9       # GUI avanzada (no usado - sistema custom)
 
-# Herramientas y utilidades
-pygame-tools>=0.1.0
+# -----------------------------------------------------------------------------
+# Físicas del Juego (Opcional - no usado actualmente)
+# -----------------------------------------------------------------------------
+# pymunk>=6.6.0           # Motor de físicas 2D (reservado para futuras funcionalidades)
 
-# Físicas del juego
-pymunk>=6.6.0
+# -----------------------------------------------------------------------------
+# Procesamiento de Imágenes y Utilidades
+# -----------------------------------------------------------------------------
+numpy>=1.24.0             # Computación numérica (usado para cálculos de juego)
+pillow>=10.0.0            # Procesamiento de imágenes (manipulación de sprites)
 
-# Utilidades adicionales
-numpy>=1.24.0
-pillow>=10.0.0
+# -----------------------------------------------------------------------------
+# Calidad de Código (Herramientas Modernas)
+# -----------------------------------------------------------------------------
+ruff>=0.1.0               # Linter y formateador moderno (reemplaza black, flake8, isort)
+mypy>=1.7.0               # Verificación de tipos estática
+pre-commit>=3.6.0         # Hooks de pre-commit para calidad de código
 
-# Desarrollo y testing
-pytest>=7.4.0
-pytest-cov>=4.1.0
-black>=23.0.0
-flake8>=6.0.0
-mypy>=1.5.0
+# -----------------------------------------------------------------------------
+# Testing y Cobertura
+# -----------------------------------------------------------------------------
+pytest>=7.4.0            # Framework de testing
+pytest-cov>=4.1.0        # Cobertura de código para pytest
+pytest-mock>=3.12.0      # Utilidades de mocking para pytest
 
-# Empaquetado
-pyinstaller>=5.13.0
-cx-freeze>=6.15.0
+# -----------------------------------------------------------------------------
+# Utilidades de Desarrollo
+# -----------------------------------------------------------------------------
+python-dotenv>=1.0.0     # Carga de variables de entorno desde .env
+
+# -----------------------------------------------------------------------------
+# Empaquetado y Distribución
+# -----------------------------------------------------------------------------
+pyinstaller>=5.13.0      # Empaquetado en ejecutables
+build>=1.0.0             # Herramientas de construcción de paquetes
+wheel>=0.42.0            # Formato wheel para distribución
+
+# -----------------------------------------------------------------------------
+# Herramientas Adicionales (Opcional)
+# -----------------------------------------------------------------------------
+# cx-freeze>=6.15.0       # Alternativa a PyInstaller
+# twine>=4.0.0            # Subida de paquetes a PyPI
+
+# -----------------------------------------------------------------------------
+# Notas de Migración de Herramientas
+# -----------------------------------------------------------------------------
+# HERRAMIENTAS REEMPLAZADAS (no instalar):
+# - black>=23.0.0        -> Reemplazado por ruff (formateo)
+# - flake8>=6.0.0        -> Reemplazado por ruff (linting)
+# - isort                -> Reemplazado por ruff (importaciones)
+# - pylint               -> Reemplazado por ruff (análisis de código)
+# - pygame-tools         -> No necesario, funcionalidad implementada
+
+# -----------------------------------------------------------------------------
+# Instalación Recomendada con Poetry
+# -----------------------------------------------------------------------------
+# En lugar de usar este archivo, recomendamos usar Poetry:
+#
+# 1. Instalar Poetry:
+#    (Invoke-WebRequest -Uri https://install.python-poetry.org -UseBasicParsing).Content | python -
+#
+# 2. Instalar dependencias del proyecto:
+#    poetry install
+#
+# 3. Ejecutar el juego:
+#    poetry run python src/main.py
+#
+# 4. Ejecutar tests:
+#    poetry run pytest
+#
+# 5. Verificar calidad de código:
+#    poetry run ruff check src/
+#    poetry run ruff format src/
+#    poetry run mypy src/
+
+# =============================================================================
+# Compatibilidad de Python
+# =============================================================================
+# Este proyecto requiere Python 3.11 o superior
+# Verificar versión: python --version
