--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,16 +11,13 @@ authors = [
 ]
 readme = "README.md"
 license = {file = "LICENSE"}
-requires-python = ">=3.8"
+requires-python = ">=3.11,<3.13"
 classifiers = [
 	"Development Status :: 3 - Alpha",
 	"Intended Audience :: End Users/Desktop",
 	"License :: OSI Approved :: MIT License",
 	"Operating System :: OS Independent",
 	"Programming Language :: Python :: 3",
-	"Programming Language :: Python :: 3.8",
-	"Programming Language :: Python :: 3.9",
-	"Programming Language :: Python :: 3.10",
 	"Programming Language :: Python :: 3.11",
 	"Programming Language :: Python :: 3.12",
 	"Topic :: Games/Entertainment",
@@ -28,11 +25,9 @@ classifiers = [
 ]
 keywords = ["game", "pygame", "2d", "python", "videojuego"]
 dependencies = [
-	"pygame-ce>=2.4.0",
-	"pygame-menu>=4.4.0",
-	"pygame-gui>=0.6.9",
-	"pygame-tools>=0.1.0",
-	"pygame-extra>=0.1.0",
+	"pygame-ce>=2.5.0",
+	"pygame-menu>=4.5.0",
+	"pygame-gui>=0.6.8,<0.6.9",
 	"pymunk>=6.6.0",
 	"numpy>=1.24.0",
 	"pillow>=10.0.0",
@@ -42,13 +37,8 @@ dependencies = [
 dev = [
 	"pytest>=7.4.0",
 	"pytest-cov>=4.1.0",
-	"black>=23.0.0",
-	"flake8>=6.0.0",
+	"ruff>=0.1.0",
 	"mypy>=1.5.0",
-]
-build = [
-	"pyinstaller>=5.13.0",
-	"cx-freeze>=6.15.0",
 ]
 
 [project.scripts]
@@ -62,42 +52,37 @@ Documentation = "https://github.com/sik-team/sik-python-game/docs"
 
 [tool.setuptools.packages.find]
 where = ["src"]
+include = ["*"]
+
+[tool.setuptools.package-dir]
+"" = "src"
 
 [tool.setuptools.package-data]
 "*" = ["*.json", "*.txt", "*.md"]
 
-[tool.black]
+[tool.ruff]
+target-version = "py311"
 line-length = 88
-target-version = ['py38']
-include = '\.pyi?$'
-extend-exclude = '''
-/(
-  # directories
-  \.eggs
-  | \.git
-  | \.hg
-  | \.mypy_cache
-  | \.tox
-  | \.venv
-  | build
-  | dist
-)/
-'''
-
-[tool.flake8]
-max-line-length = 88
-extend-ignore = ["E203", "W503"]
-exclude = [
-	".git",
-	"__pycache__",
-	"build",
-	"dist",
-	".venv",
-	"venv",
+select = [
+    "E",  # pycodestyle errors
+    "W",  # pycodestyle warnings
+    "F",  # pyflakes
+    "I",  # isort
+    "B",  # flake8-bugbear
+    "C4", # flake8-comprehensions
+    "UP", # pyupgrade
+]
+ignore = [
+    "E501",  # line too long, handled by black
+    "B008",  # do not perform function calls in argument defaults
+    "C901",  # too complex
 ]
 
+[tool.ruff.per-file-ignores]
+"__init__.py" = ["F401"]
+
 [tool.mypy]
-python_version = "3.8"
+python_version = "3.11"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
